--- a/Multi_Tacotron_Voice_Cloning.ipynb
+++ b/Multi_Tacotron_Voice_Cloning.ipynb
@@ -100,7 +100,8 @@
         "colab": {}
       },
       "source": [
-        "!gdown https://drive.google.com/uc?id=1aQBmpflbX_ePUdXTSNE4CfEL9hdG2-O8"
+        "from google.colab import drive
+         drive.mount('/content/drive/')"
       ],
       "execution_count": 0,
       "outputs": []
