--- a/Multi_Tacotron_Voice_Cloning.ipynb
+++ b/Multi_Tacotron_Voice_Cloning.ipynb
@@ -101,7 +101,7 @@
       },
       "source": [
         "from google.colab import drive"
-        
+        "drive.mount("/content/drive/")"
       ],
       "execution_count": 0,
       "outputs": []
