--- a/Multi_Tacotron_Voice_Cloning.ipynb
+++ b/Multi_Tacotron_Voice_Cloning.ipynb
@@ -100,7 +100,7 @@
         "colab": {}
       },
       "source": [
-        "from google.colab import drive"
+        "from google.colab import drive",
         "drive.mount("/content/drive/")"
       ],
       "execution_count": 0,
