--- a/Multi_Tacotron_Voice_Cloning.ipynb
+++ b/Multi_Tacotron_Voice_Cloning.ipynb
@@ -33,7 +33,7 @@
         "colab": {}
       },
       "source": [
-        "tensorflow_version 2.x\n",
+        "%tensorflow_version 2.x\n",
         "!pip uninstall -y tensorflow\n",
         "!pip install tensorflow-gpu==2.11.0"
       ],
